Chapter07/7.2_Ingress/timeserver-service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeserver-internal
spec:
  selector:
    pod: timeserver-pod
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
